# booru.hs

./: CHANGELOG.md  CHANGELOG.raw.md  Flow.md  README.md  booru-hs.cabal  flake.nix  fourmolu.yaml
.github/workflows/: haskell.yml
app/: Main.hs
app/Cli/: Commands.hs  Common.hs  Dispatcher.hs  Options.hs
app/Cli/Commands/: Build.hs  Download.hs  Preview.hs
booru-cli/Cli/: Dispatcher.hs  Options.hs
booru-cli/Cli/Commands/: AutoTag.hs  Build.hs  Download.hs  Generate.hs  Metadata.hs  Preview.hs  Query.hs
booru-cli/Cli/Utils/: Build.hs  Common.hs
examples/: config.toml  filters.toml  previews.toml  providers.toml  source.toml  sources.toml  synonyms.toml
lib/: Helpers.hs  MyLib.hs
lib-cli/Cli/: Dispatcher.hs  Options.hs
lib-cli/Cli/Commands/: Build.hs  Download.hs  Query.hs
lib-cli/Cli/Utils/: Build.hs  Common.hs  Query.hs
lib/Booru/: Core.hs  Overrides.hs  Preview.hs  RequestProvider.hs  Requests.hs  Synonyms.hs
lib/Booru/Builtin/: Providers.hs
lib/Booru/Core/: Category.hs  Core.hs  FilterCat.hs  Overrides.hs  Parsers.hs  Preview.hs  Requests.hs  Synonyms.hs
lib/Booru/Schema/: Config.hs  Filters.hs  Identifier.hs  Images.hs  PFilters.hs  Providers.hs  Sources.hs  Synonyms.hs
nix/: cishell.nix  package.nix  shell.nix
specs/: providerspec.toml  sourcespec.toml  synonymsspec.toml
test/: CoreSpec.hs  OverrideSpec.hs  PreviewSpec.hs  QuoteStr.hs  RequestSpec.hs  SourceParseSpec.hs  SynonymSpec.hs
test/Builtin/: ProviderSpec.hs
test/Core/: CategorySpec.hs  CoreSpec.hs  FilterCatSpec.hs  OverrideSpec.hs  PreviewSpec.hs  RequestSpec.hs  SynonymSpec.hs
test/Schema/: ConfigSpec.hs  FilterSpec.hs  ImageSpec.hs  ProviderSpec.hs  SourceSpec.hs  SynonymSpec.hs
