cabal-version:   3.0
name:            booru-hs
version:         0.0.1.0
synopsis:        Extensible Auto-categorizing image library

-- description:
homepage:        https://github.com/Rexcrazy804/booru.hs
license:         MPL-2.0
license-file:    LICENSE
author:          Rexiel Scarlet
maintainer:      37258415+Rexcrazy804@users.noreply.github.com

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  other-modules:    Helpers
  exposed-modules:
    Booru.Builtin.Providers
    Booru.Core.Category
    Booru.Core.Overrides
    Booru.Core.Preview
    Booru.Core.Requests
    Booru.Core.Synonyms
    Booru.Schema.Filters
    Booru.Schema.Images
    Booru.Schema.PFilters
    Booru.Schema.Providers
    Booru.Schema.Sources
    Booru.Schema.Synonyms

  build-depends:
    , aeson         ^>=2.2.3.0
    , base          ^>=4.19.2.0
    , containers    ^>=0.6.8
    , hashable      ^>=1.4.7.0
    , http-conduit  ^>=2.3.9.1
    , split         ^>=0.2.5
    , text          ^>=2.1.1
    , toml-parser   ^>=2.0.1.2
    , vector        ^>=0.13.2.0

  hs-source-dirs:   lib
  default-language: Haskell2010

executable booru-hs
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base      ^>=4.19.2.0
    , booru-hs

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite booru-hs-test
  import:             warnings
  default-language:   Haskell2010
  default-extensions: QuasiQuotes
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , aeson             ^>=2.2.3.0
    , aeson-qq          ^>=0.8.4
    , base              ^>=4.19.2.0
    , booru-hs
    , containers        ^>=0.6.8
    , hspec             ^>=2.11.12
    , template-haskell  ^>=2.21.0.0
    , text              ^>=2.1.1
    , toml-parser       ^>=2.0.1.2

  other-modules:
    Builtin.ProviderSpec
    Core.CategorySpec
    Core.OverrideSpec
    Core.PreviewSpec
    Core.RequestSpec
    Core.SynonymSpec
    QuoteStr
    Schema.FilterSpec
    Schema.ImageSpec
    Schema.ProviderSpec
    Schema.SourceSpec
    Schema.SynonymSpec
    SpecHook

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
