cabal-version:   3.0
name:            booru-hs
version:         0.0.1.0
synopsis:        Extensible Auto-categorizing image library

-- description:
homepage:        https://github.com/Rexcrazy804/booru.hs
license:         MPL-2.0
license-file:    LICENSE
author:          Rexiel Scarlet
maintainer:      37258415+Rexcrazy804@users.noreply.github.com

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  other-modules:    Helpers
  exposed-modules:
    Booru.Builtin.Providers
    Booru.Core.Category
    Booru.Core.FilterCat
    Booru.Core.Overrides
    Booru.Core.Parsers
    Booru.Core.Preview
    Booru.Core.Requests
    Booru.Core.Synonyms
    Booru.Schema.Config
    Booru.Schema.Filters
    Booru.Schema.Identifier
    Booru.Schema.Images
    Booru.Schema.PFilters
    Booru.Schema.Providers
    Booru.Schema.Sources
    Booru.Schema.Synonyms

  build-depends:
    , aeson         >=2.2.3  && <2.3
    , base          >=4.19.2 && <4.20
    , bytestring    >=0.12.1 && <0.13
    , containers    >=0.6.8  && <0.7
    , hashable      >=1.4.7  && <1.5
    , http-conduit  >=2.3.9  && <2.4
    , split         >=0.2.5  && <0.3
    , text          >=2.1.1  && <2.2
    , toml-parser   >=2.0.1  && <2.1
    , vector        >=0.13.2 && <0.14

  hs-source-dirs:   lib
  default-language: Haskell2010

library booru-cli
  import:           warnings
  exposed-modules:
    Cli.Commands.Build
    Cli.Commands.Download
    Cli.Commands.Preview
    Cli.Common
    Cli.Dispatcher
    Cli.Options

  hs-source-dirs:   lib-cli
  default-language: Haskell2010
  build-depends:
    , base                  >=4.19.2  && <4.20
    , booru-hs
    , bytestring            >=0.12.1  && <0.13
    , containers            >=0.6.8   && <0.7
    , directory             >=1.3.8   && <1.4
    , filepath              >=1.4.301 && <1.5
    , optparse-applicative  >=0.18.1  && <0.19

executable booru-hs
  import:           warnings
  main-is:          Main.hs
  other-modules:

  -- other-extensions:
  build-depends:
    , base
    , booru-cli

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite booru-hs-test
  import:             warnings
  default-language:   Haskell2010
  default-extensions: QuasiQuotes
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , aeson             >=2.2.3   && <2.3
    , aeson-qq          >=0.8.4   && <0.9
    , base              >=4.19.2  && <4.20
    , booru-hs
    , containers        >=0.6.8   && <0.7
    , hspec             >=2.11.12 && <2.12
    , template-haskell  >=2.21.0  && <2.22
    , text              >=2.1.1   && <2.2
    , toml-parser       >=2.0.1   && <2.1

  other-modules:
    Builtin.ProviderSpec
    Core.CategorySpec
    Core.FilterCatSpec
    Core.OverrideSpec
    Core.PreviewSpec
    Core.RequestSpec
    Core.SynonymSpec
    QuoteStr
    Schema.ConfigSpec
    Schema.FilterSpec
    Schema.ImageSpec
    Schema.ProviderSpec
    Schema.SourceSpec
    Schema.SynonymSpec
    SpecHook

  build-tool-depends: hspec-discover:hspec-discover
